--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,15 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.anohin.artem.seafight.MainActivity"
-    tools:showIn="@layout/activity_main">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/ic_back2" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="90dp">
+
+        <TextView
+            android:id="@+id/start"
+            style="@style/MenuFont"
+            android:text="@string/menu_start_game"
+            android:layout_width="531dp"
+            android:layout_height="77dp"
+            android:textSize="24dp"
+            android:onClick="onClick" />
+
+        <TextView
+            android:id="@+id/settings"
+            style="@style/MenuFont"
+            android:text="@string/menu_settings_game"
+            android:layout_width="548dp"
+            android:layout_height="49dp"
+            android:textSize="24dp"
+            android:onClick="onClick2" />
+
+        <TextView
+            android:id="@+id/about"
+            style="@style/MenuFont"
+            android:text="@string/menu_about"
+            android:layout_width="532dp"
+            android:layout_height="66dp"
+            android:textSize="24dp"
+            android:onClick="onClick1"/>
+
+        <TextView
+            android:id="@+id/exit"
+            style="@style/ExitFont"
+            android:text="@string/menu_exit"
+            android:layout_width="529dp"
+            android:layout_height="51dp"
+            android:textSize="24dp" />
+    </LinearLayout>
 
 </RelativeLayout>
