--- a/app/src/main/res/layout/start_main.xml
+++ b/app/src/main/res/layout/start_main.xml
@@ -2,6 +2,105 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f4f4f4"
+    android:gravity="center_vertical"
+    android:paddingLeft="20dp"
+    android:weightSum="1">
+
+    <com.anohin.artem.seafight.GameView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/game_view"
+        android:background="#000"
+        android:layout_gravity="left|center_vertical" />
+
+    <FrameLayout
+        android:layout_width="172dp"
+        android:layout_height="66dp"
+        android:layout_gravity="right|top">
+
+        <TableLayout
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="left|bottom"
+            android:background="#ff0000"></TableLayout>
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="  4"
+            android:id="@+id/textView"
+            android:layout_gravity="right|bottom"
+            android:textColor="#000000" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="186dp"
+        android:layout_height="113dp"
+        android:layout_gravity="right|center_vertical">
+
+        <TableLayout
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_gravity="left|top"
+            android:background="#ff0000"></TableLayout>
+
+        <TextView
+            android:layout_width="68dp"
+            android:layout_height="34dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="  3"
+            android:id="@+id/textView2"
+            android:layout_gravity="right|top"
+            android:textColor="#000000" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="203dp"
+        android:layout_height="71dp"
+        android:layout_gravity="right|bottom">
+
+        <TableLayout
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:layout_gravity="left|top"
+            android:background="#ff0000"></TableLayout>
+
+        <TextView
+            android:layout_width="58dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="1"
+            android:id="@+id/textView4"
+            android:layout_gravity="right|top"
+            android:textColor="#000000" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="195dp"
+        android:layout_height="94dp"
+        android:layout_gravity="right|center_vertical">
+
+        <TableLayout
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:layout_gravity="left|bottom"
+            android:background="#ff0000"></TableLayout>
+
+        <TextView
+            android:layout_width="68dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="  2"
+            android:id="@+id/textView3"
+            android:layout_gravity="right|bottom"
+            android:textColor="#000000" />
+
+    </FrameLayout>
+
 
 </FrameLayout>
